# video_reader-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  bench.py  cursor_verify_py_25_26_with_fallback_f.md  license_notes.md  pyproject.toml  verify.py  verify2.py
.cargo/: config  config.toml
.github/workflows/: build.yml  ci.yml  pre_build.sh  pre_build_aarch64.sh  pre_build_arm64.sh  pre_build_x86_64.sh
docs/: b-frame-seek-fix.md
scripts/: bench_get_batch.py  test_frame_iterator.py
src/: convert.rs  decoder.rs  ffi_hwaccel.rs  filter.rs  hwaccel.rs  info.rs  lib.rs  reader.rs  utils.rs  video_io.rs
