[package]
name = "video_reader-rs"
version = "0.2.7"
edition = "2021"

[lib]
name = "video_reader"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.1", features = ["extension-module"] }
numpy = "0.24"
ndarray = { version = "0.16.1", features = ["rayon"] }
ffmpeg-next = "7.1.0"
env_logger = "0.11.5"
log = "0.4.22"
tokio = { version = "1.44", features = ["full"] }
yuv = "0.8.4"
once_cell = "1.20.2"

[features]
ffmpeg_6_0 = []

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
