[package]
name = "video_reader-rs"
version = "0.4.2"
edition = "2021"

[lib]
name = "video_reader"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
numpy = "0.27"
ndarray = { version = "0.16", features = ["rayon"] }
ffmpeg-next = "8.0.0"
env_logger = "0.11.8"
log = "0.4.29"
tokio = { version = "1.48", features = ["full"] }
yuv = "0.8.9"
once_cell = "1.21"
libc = "0.2"

[features]
# enable this feature for ffmpeg version <= 5
ffmpeg_5 = []

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
