[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[project]
name = "video_reader-rs"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
license = "MIT OR GPL-2.0 OR GPL-3.0"
license-files = [
    "LICENSE",
    "COPYING.GPLv2.FFmpeg",
    "COPYING.GPLv3.FFmpeg",
    "license_notes.md",
]

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 120
